--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -1,119 +1,197 @@
-<div *ngIf="activeCrypto" class="refill-cripto side-popups">
-<h2 class="title refill__title">
-  {{'Crypto deposit' | translate}}
-  <span>{{activeCrypto.name}}</span>
-</h2>
-<div class="refill__inputs-wrap">
-  <div class="select refill__select refill__select--cripto">
-    <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
-      <img [src]="activeCrypto.name | getIconUrl" class="select__list-item-icon">
-      {{activeCrypto.name}}
-      <div class="select__triangle"></div>
-    </div>
-    <div class="select__label">{{'Currency' | translate}}</div>
-    <div class="select__line"></div>
-    <div class="select__list-searching"
-         [ngClass]="{'select__list-searching--open': openCurrencyDropdown}"
-         *ngIf="openCurrencyDropdown">
-      <div class="select__search">
-        <input class="select__search-input" type="text" placeholder="Search" (input)="searchCoin($event)">
-        <div class="select__search-icon">
-          <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
-          </svg>
+<div
+  *ngIf="activeCrypto"
+  class="refill-cripto side-popups"
+>
+  <h2 class="title refill__title">
+    {{'Crypto deposit' | translate}}
+    <span>{{activeCrypto.name}}</span>
+  </h2>
+  <div class="refill__inputs-wrap">
+    <div class="select refill__select refill__select--cripto">
+      <div
+        class="select__value select__value--active"
+        (click)="currencyDropdownToggle()"
+      >
+        <img
+          [src]="activeCrypto.name | getIconUrl"
+          class="select__list-item-icon"
+        >
+        {{activeCrypto.name}}
+        <div class="select__triangle"></div>
+      </div>
+      <div class="select__label">{{'Currency' | translate}}</div>
+      <div class="select__line"></div>
+      <div
+        class="select__list-searching"
+        [ngClass]="{'select__list-searching--open': openCurrencyDropdown}"
+        *ngIf="openCurrencyDropdown"
+      >
+        <div class="select__search">
+          <input
+            class="select__search-input"
+            type="text"
+            placeholder="Search"
+            (input)="searchCoin($event)"
+          >
+          <div class="select__search-icon">
+            <svg
+              width="18"
+              height="18"
+              viewBox="0 0 18 18"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"
+              />
+            </svg>
+          </div>
+        </div>
+        <div class="select__list-searching-body">
+
+          <perfect-scrollbar>
+            <ng-container *ngFor="let letter of alphabet">
+              <h6 class="select__searching-items-title"><span>{{letter.toUpperCase()}}</span></h6>
+              <div class="select__searching-items-wrap">
+                <div
+                  class="select__searching-item"
+                  *ngFor="let name of cryptoNames | groupCoin:letter"
+                  (click)="selectCurrency(name)"
+                >
+                  <img
+                    [src]="name.name | getIconUrl"
+                    class="select__list-item-icon"
+                  >
+                  <span>{{name.name}}</span>
+                </div>
+              </div>
+            </ng-container>
+          </perfect-scrollbar>
         </div>
       </div>
-      <div class="select__list-searching-body">
+    </div>
 
-        <perfect-scrollbar>
-          <ng-container *ngFor="let letter of alphabet">
-            <h6 class="select__searching-items-title"><span>{{letter.toUpperCase()}}</span></h6>
-            <div class="select__searching-items-wrap">
-              <div class="select__searching-item" *ngFor="let name of cryptoNames | groupCoin:letter" (click)="selectCurrency(name)">
-                <img [src]="name.name | getIconUrl" class="select__list-item-icon">
-                <span>{{name.name}}</span>
-              </div>
-            </div>
-          </ng-container>
-        </perfect-scrollbar>
+    <button
+      class="btn btn--empty-blue"
+      *ngIf="isGenerateNewAddress"
+      (click)="generateNewAddress()"
+      [disabled]="loading"
+    >
+      <span class="btn__icon btn__icon--light-blue">
+        <svg
+          width="10"
+          height="12"
+          viewBox="0 0 10 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M0.0327983 6.42016C-0.0457435 5.78503 0.019708 5.17189 0.197736 4.60515C0.789418 2.72174 2.64562 1.33666 4.84741 1.31223V0.0810523C4.84741 0.0126534 4.93905 -0.0239889 4.99926 0.017539L7.71419 1.87897C7.7587 1.91072 7.7587 1.97424 7.71419 2.00355L5.00188 3.86498C4.93905 3.90651 4.85003 3.86986 4.85003 3.80146V2.57273C3.40224 2.59471 2.16652 3.42771 1.63505 4.60515C1.43346 5.04974 1.33136 5.54075 1.36016 6.05619C1.39943 6.7646 1.6848 7.41683 2.1351 7.94448C2.37596 8.22541 2.31837 8.6358 2.00682 8.84833C1.71098 9.05108 1.29732 8.99489 1.06955 8.72618C0.511904 8.0764 0.140139 7.28492 0.0327983 6.42016ZM7.87127 4.05552C8.3242 4.58072 8.60957 5.2354 8.64622 5.94382C8.67502 6.46169 8.5703 6.9527 8.37132 7.39485C7.83986 8.57229 6.60413 9.40773 5.15634 9.42727V8.19854C5.15634 8.13014 5.06471 8.0935 5.0045 8.13502L2.28957 9.99645C2.24506 10.0282 2.24506 10.0917 2.28957 10.121L5.00188 11.9825C5.06471 12.024 5.15373 11.9873 5.15373 11.9189V10.6878C7.35552 10.6658 9.21434 9.2807 9.8034 7.39485C9.98143 6.82811 10.0443 6.21497 9.96834 5.57984C9.86362 4.71508 9.49185 3.92361 8.93421 3.27382C8.70382 3.00511 8.29278 2.94892 7.99694 3.15167C7.68801 3.3642 7.63041 3.77459 7.87127 4.05552Z"
+          />
+        </svg>
+      </span>
+      {{'Generate new address' | translate}}
+    </button>
+
+    <div
+      class="request-errors"
+      *ngIf="!isGenerateNewAddress && cryptoDataByName && !cryptoDataByName?.merchantCurrencyData.length"
+    >
+      {{'Sorry, refill is closed for current moment!' | translate}}
+    </div>
+  </div>
+
+  <div class="request-errors">{{reqError}}</div>
+
+  <div
+    class="refill__crypto-refill-info"
+    *ngIf="cryptoDataByName?.merchantCurrencyData?.length"
+  >
+    <div class="refill__qr-code">
+      <qr-code
+        [value]="qrAddress"
+        *ngIf="qrAddress && address"
+        [size]="150"
+      ></qr-code>
+    </div>
+    <div>
+      <div
+        class="refill__crypto-address"
+        *ngIf="address"
+      >
+        <h6 class="refill__crypto-title"><span>{{activeCrypto?.name}}</span> {{'address' | translate}}</h6>
+        <div class="refill__crypto-hash">{{address}}</div>
+        <button
+          class="btn btn--small btn--empty-blue refill__crypto-copy-btn"
+          *ngIf="!isSowCopyAddress"
+          (click)="copyToBuffer(address, 'Copy address')"
+        >
+          {{'Copy address' | translate}}
+        </button>
+        <button
+          class="btn btn--small btn--empty-blue refill__crypto-copy-btn"
+          *ngIf="isSowCopyAddress"
+        >
+          {{'Copied' | translate}}
+        </button>
+      </div>
+      <div
+        class="refill__crypto-memo"
+        *ngIf="cryptoDataByName.merchantCurrencyData[0].additionalFieldName && !!additionalAddress"
+      >
+        <h6 class="refill__crypto-title">{{cryptoDataByName.merchantCurrencyData[0].additionalFieldName}}</h6>
+        <div class="refill__crypto-hash">{{additionalAddress}}</div>
+        <button
+          class="btn btn--small btn--empty-blue refill__crypto-copy-btn"
+          *ngIf="!isSowCopyMemoId"
+          (click)="copyToBuffer(additionalAddress, 'Copy id')"
+        >
+          {{'Copy id' | translate}}
+        </button>
+        <button
+          class="btn btn--small btn--empty-blue refill__crypto-copy-btn"
+          *ngIf="isSowCopyMemoId"
+        >{{'Copied' | translate}}</button>
       </div>
     </div>
   </div>
 
-  <button
-    class="btn btn--empty-blue"
-    *ngIf="isGenerateNewAddress"
-    (click)="generateNewAddress()"
-    [disabled]="loading"
-  >
-    <span class="btn__icon btn__icon--light-blue">
-      <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M0.0327983 6.42016C-0.0457435 5.78503 0.019708 5.17189 0.197736 4.60515C0.789418 2.72174 2.64562 1.33666 4.84741 1.31223V0.0810523C4.84741 0.0126534 4.93905 -0.0239889 4.99926 0.017539L7.71419 1.87897C7.7587 1.91072 7.7587 1.97424 7.71419 2.00355L5.00188 3.86498C4.93905 3.90651 4.85003 3.86986 4.85003 3.80146V2.57273C3.40224 2.59471 2.16652 3.42771 1.63505 4.60515C1.43346 5.04974 1.33136 5.54075 1.36016 6.05619C1.39943 6.7646 1.6848 7.41683 2.1351 7.94448C2.37596 8.22541 2.31837 8.6358 2.00682 8.84833C1.71098 9.05108 1.29732 8.99489 1.06955 8.72618C0.511904 8.0764 0.140139 7.28492 0.0327983 6.42016ZM7.87127 4.05552C8.3242 4.58072 8.60957 5.2354 8.64622 5.94382C8.67502 6.46169 8.5703 6.9527 8.37132 7.39485C7.83986 8.57229 6.60413 9.40773 5.15634 9.42727V8.19854C5.15634 8.13014 5.06471 8.0935 5.0045 8.13502L2.28957 9.99645C2.24506 10.0282 2.24506 10.0917 2.28957 10.121L5.00188 11.9825C5.06471 12.024 5.15373 11.9873 5.15373 11.9189V10.6878C7.35552 10.6658 9.21434 9.2807 9.8034 7.39485C9.98143 6.82811 10.0443 6.21497 9.96834 5.57984C9.86362 4.71508 9.49185 3.92361 8.93421 3.27382C8.70382 3.00511 8.29278 2.94892 7.99694 3.15167C7.68801 3.3642 7.63041 3.77459 7.87127 4.05552Z"/>
-      </svg>
-    </span>
-    {{'Generate new address' | translate}}
-  </button>
-
-  <div class="request-errors" *ngIf="!isGenerateNewAddress && cryptoDataByName && !cryptoDataByName?.merchantCurrencyData.length">
-    {{'Sorry, refill is closed for current moment!' | translate}}
+  <div class="note modal__note">
+    <div class="note__title">{{'Please note:' | translate}}</div>
+    <ul class="note__list">
+      <li
+        class="note__list-item"
+        *ngIf="activeCrypto.name === 'LSK'"
+      >
+        <b>{{' Commission for the' | translate}} {{activeCrypto.name}} {{'deposit is' | translate}} 0.1</b>
+      </li>
+      <li
+        class="note__list-item"
+        *ngIf="!!cryptoDataByName"
+      >
+        {{'Coins will be deposited immediately after' | translate}}
+        <b>
+          {{cryptoDataByName.minConfirmations | countConfirmations:activeCrypto.name}}
+        </b>
+        {{'network confirmations' | translate}}
+      </li>
+      <li class="note__list-item">
+        {{'Send only' | translate}} <b>{{activeCrypto.name}} </b>
+        {{'to this deposit address.'  | translate}}{{' Sending any other coin or token to this address may result in the loss of your deposit.' | translate}}
+      </li>
+      <li class="note__list-item note__list-item__warning">
+        {{'If the MEMO-text, TAG is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a MEMO, TAG.' | translate}}
+      </li>
+    </ul>
   </div>
-</div>
-
-<div class="request-errors">{{reqError}}</div>
-
-<div class="refill__crypto-refill-info" *ngIf="cryptoDataByName?.merchantCurrencyData?.length">
-  <div class="refill__qr-code">
-    <qr-code [value]="qrAddress" *ngIf="qrAddress && address" [size]="150"></qr-code>
-  </div>
-  <div>
-    <div class="refill__crypto-address" *ngIf="address">
-      <h6 class="refill__crypto-title"><span>{{activeCrypto?.name}}</span> {{'address' | translate}}</h6>
-      <div class="refill__crypto-hash">{{address}}</div>
-      <button class="btn btn--small btn--empty-blue refill__crypto-copy-btn" *ngIf="!isSowCopyAddress"
-              (click)="copyToBuffer(address, 'Copy address')">
-        {{'Copy address' | translate}}
-      </button>
-      <button class="btn btn--small btn--empty-blue refill__crypto-copy-btn" *ngIf="isSowCopyAddress">
-        {{'Copied' | translate}}
-      </button>
-    </div>
-    <div class="refill__crypto-memo" *ngIf="cryptoDataByName.merchantCurrencyData[0].additionalFieldName && !!additionalAddress">
-      <h6 class="refill__crypto-title">{{cryptoDataByName.merchantCurrencyData[0].additionalFieldName}}</h6>
-      <div class="refill__crypto-hash">{{additionalAddress}}</div>
-      <button class="btn btn--small btn--empty-blue refill__crypto-copy-btn" *ngIf="!isSowCopyMemoId"
-              (click)="copyToBuffer(additionalAddress, 'Copy id')">
-        {{'Copy id' | translate}}
-      </button>
-      <button class="btn btn--small btn--empty-blue refill__crypto-copy-btn" *ngIf="isSowCopyMemoId"
-      >{{'Copied' | translate}}</button>
-    </div>
-  </div>
-</div>
-
-<div class="note modal__note">
-  <div class="note__title">{{'Please note:' | translate}}</div>
-  <ul class="note__list">
-    <li class="note__list-item" *ngIf="!!cryptoDataByName">
-      {{'Coins will be deposited immediately after' | translate}}
-      <b>
-        {{cryptoDataByName.minConfirmations | countConfirmations:activeCrypto.name}}
-      </b>
-      {{'network confirmations' | translate}}
-    </li>
-    <li class="note__list-item">
-      {{'Send only' | translate}} <b>{{activeCrypto.name}} </b>
-      {{'to this deposit address.'  | translate}}{{' Sending any other coin or token to this address may result in the loss of your deposit.' | translate}}
-    </li>
-    <li class="note__list-item note__list-item__warning">
-      {{'If the MEMO-text, TAG is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a MEMO, TAG.' | translate}}
-    </li>
-  </ul>
-</div>
 
 </div>
 
-<div class="loading-container" *ngIf="!activeCrypto">
+<div
+  class="loading-container"
+  *ngIf="!activeCrypto"
+>
   <app-loader></app-loader>
 </div>
